.provarCaches/00D410000011HE0EAM/objects/rstkf__rifr__c.object
<CustomObject>
    <description>rifr__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>externalid__c</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__rifr_cmpno__r.rstkf__externalid__c + rstkf__rifr_rptname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__rifr_rptname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_budgetdflt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field drives the default value of the ‘Use Budgets’ option in the Financial Analytics app for this report.</inlineHelpText>
        <label>Budget Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>rifr_cmpno__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>rifrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_disp_rptname__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rifr_disp_rptname__c</description>
        <label>Display Report Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>rifr_glyear</description>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Financial Analytics Reports</relationshipLabel>
        <relationshipName>rifrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_intro__c</fullName>
        <description>rifr_intro</description>
        <label>Z_OBSOLETE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_numeric_scale__c</fullName>
        <description>rifr_numeric_scale</description>
        <label>Z_OBSOLETE</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_period__c</fullName>
        <label>Z_OBSOLETE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_periodname__c</fullName>
        <description>rifr_periodname</description>
        <label>Z_OBSOLETE</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_rpt_columns__c</fullName>
        <label>Report Columns</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TC-Debits</fullName>
                </value>
                <value>
                    <fullName>TC-Credits</fullName>
                </value>
                <value>
                    <fullName>FC-Debits</fullName>
                </value>
                <value>
                    <fullName>FC-Credits</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__rifr_rpt_id__c</fullName>
        <description>rifr_rpt_id__c</description>
        <label>Z_OBSOLETE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_rpt_styles__c</fullName>
        <label>Z_OBSOLETE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_rpt_type__c</fullName>
        <description>rifr_rpt_type__c</description>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Trial Balance</fullName>
                </value>
                <value>
                    <fullName>Cash Flow</fullName>
                </value>
                <value>
                    <fullName>Budget Listing</fullName>
                    <isActive>false</isActive>
                    <label>Budget Listing</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__rifr_rptname__c</fullName>
        <description>rifr_rptname__c</description>
        <label>Report Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_show_symbols__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rifr_show_symbols__c</description>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__rifr_symbols_first_last__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rifr_symbols_first_last__c</description>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Analytics Reports</label>
    <listViews>
        <fullName>Mountain_Manufacturing_Reports</fullName>
        <columns>NAME</columns>
        <columns>rstkf__rifr_cmpno__c</columns>
        <columns>rstkf__rifr_budgetdflt__c</columns>
        <columns>rstkf__rifr_disp_rptname__c</columns>
        <columns>rstkf__rifr_rptname__c</columns>
        <columns>rstkf__rifr_rpt_type__c</columns>
        <columns>rstkf__rifr_rpt_columns__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__rifr_cmpno__c</field>
            <operation>contains</operation>
            <value>Mountain</value>
        </filters>
        <label>Mountain Manufacturing Reports</label>
    </listViews>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__rifr_rpt_type__c</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>rstkf__rifr_cmpno__c</columns>
        <columns>rstkf__rifr_budgetdflt__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Analytics Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>